# EchoScribe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DOCKER-OPTIM.md  Dockerfile  GEMINI.md  LICENSE  Makefile  QUICKSTART.md  README copy.md  README.md  REAME.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest_output.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: auth.py  cleanup.py  config.yaml  config_manager.py  get_vad.py  main.py  models.py  pipeline.py  rate_limiter.py  utils.py
docs-docker/: builder-settings.md  continuous-integration.md  docker-build-cloud.md  optimization.md  setup.md  usage.md
frontend/: index.html  worklet.js
tests/: __init__.py  conftest.py  run_tests.py  test_api.py  test_auth.py  test_cleanup.py  test_config_manager.py  test_frontend_security.py  test_model_cache.py  test_pipeline.py  test_rate_limiter.py  test_vad_hardening.py  test_validation.py  test_websocket_status.py  transcribe_test.txt
