[project]
name = "echoscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "silero-vad>=6.2.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
